# nrfxlib

./: README.rst  common.cmake
crypto/: CMakeLists.txt  README.rst
crypto/doc/: api.rst  nrf_cc310_bl.rst  nrf_cc310_mbedcrypto.rst  nrf_oberon.rst
crypto/nrf_cc310_platform/include/: nrf_cc3xx_platform.h
crypto/nrf_cc312_platform/include/: nrf_cc3xx_platform_derived_key.h  nrf_cc3xx_platform_hmac_drbg.h  nrf_cc3xx_platform_kmu.h
crypto/nrf_oberon/: CHANGELOG.rst
crypto/nrf_oberon/include/: ocrypto_aes_cbc.h  ocrypto_aes_ccm.h  ocrypto_aes_cmac.h  ocrypto_aes_ctr.h  ocrypto_aes_eax.h  ocrypto_aes_ecb.h  ocrypto_aes_gcm.h  ocrypto_chacha20.h  ocrypto_chacha20_poly1305.h  ocrypto_constant_time.h  ocrypto_curve_p224.h  ocrypto_curve_p256.h  ocrypto_ecdh_p224.h  ocrypto_ecdh_p256.h  ocrypto_ecdsa_p256.h  ocrypto_hkdf_sha512.h  ocrypto_rsa.h  ocrypto_rsa_key.h  ocrypto_sc_p224.h  ocrypto_sc_p256.h  ocrypto_types.h
nrf_security/: CMakeLists.txt  Kconfig  Kconfig.psa  README.rst
nrf_security/cmake/: extensions.cmake  kconfig_mbedtls_configure.cmake  kconfig_psa_configure.cmake  legacy_crypto_config.cmake  symbol_rename.cmake
nrf_security/configs/: nrf-config.h.template
nrf_security/doc/: api.rst  backend_config.rst  configuration.rst  driver_config.rst  drivers.rst  mbed_tls_header.rst  nrf_security.rst
nrf_security/include/mbedcrypto_glue/: backend_aes.h  backend_ccm.h  backend_cmac.h  backend_dhm.h  backend_rsa.h
nrf_security/include/mbedcrypto_glue/mbedtls/: aes_alt.h  ccm_alt.h  platform_alt.h  rsa_alt.h
nrf_security/include/mbedcrypto_glue/mbedtls/timing/: timing_alt.h
nrf_security/src/: CMakeLists.txt  psa_crypto_driver_wrappers.c  random_ext.c
nrf_security/src/drivers/: Kconfig
nrf_security/src/mbedcrypto_glue/: CMakeLists.txt
nrf_security/src/mbedtls/: CMakeLists.txt  timing_alt.c
nrf_security/src/mbedtls/cc310/: CMakeLists.txt
nrf_security/src/mbedtls/oberon/: CMakeLists.txt
nrf_security/src/mbedtls/replacements/: memory_buffer_alloc.c
nrf_security/src/mbedtls/shared/: CMakeLists.txt
nrf_security/src/psa/: CMakeLists.txt
nrf_security/src/psa/replacements/: psa_crypto.c
nrf_security/src/tfm/: CMakeLists.txt
nrf_security/src/zephyr/: CMakeLists.txt
nrf_security/tfm/: CMakeLists.txt
